# app_congressLens

./: .env.example  .gitignore  AACR-2026.ipynb  ASCO-2026.ipynb  README.md  design.md  docker-compose.yml  new.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 62414977a315_initial_schema.py  8b32eb1d7ec2_add_users_table.py  b93082b6384d_initial_schema.py  c4a82f1d3e57_add_indexes.py  d5b91f2e4a68_add_check_constraints.py  e6967c496d21_expand_author_name_columns_to_text.py  e6c73f3b5a12_fix_uuid_server_default.py
backend/app/: main.py
backend/app/api/: __init__.py  ai.py  attachments.py  calendar.py  conferences.py  health.py  importer.py  interactions.py  presentation_attachments.py  presentations.py  sessions.py  watchlist.py
backend/app/auth/: dependencies.py  ldap.py  models.py  routes.py
backend/app/core/: config.py  database.py
backend/app/importers/: __init__.py  aacr.py  asco.py  base.py
backend/app/models/: __init__.py  ai_summary.py  annotation.py  attachment.py  base.py  comment.py  conference.py  presentation.py  presentation_author.py  presentation_entity.py  presentation_topic.py  session.py  session_topic.py  topic.py  watchlist_item.py
backend/app/schemas/: __init__.py  conference.py  interaction.py  presentation.py  session.py  watchlist.py
backend/app/services/: minio.py
backend/app/workers/: __init__.py  celery_app.py  runner.py  (+1 more)
backend/scripts/: import_all.sh  import_conferences.py
backend/tests/: conftest.py  test_conferences.py  test_health.py  test_presentations.py  test_sessions.py
(+36 files in other folders)
